--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!--------Course------->
         <section class="course">
             <h1>courses we offer</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>The university offers many academic programs.Students can recieve a three-year diploma,a barchelors degree,masters degree,or a doctrate phD.<br>In 2004,the universityestablished a patnership with Michigan university that allows students to complete half of their degree at Kenyas Biggest University in a choice of computer science,engineering and business administration.</p>
             <div class="row">
                 <div class="course-col">
                     <h3>Intermediate</h3>
@@ -54,7 +54,7 @@
         <!------campus------->
         <section class="campus">
             <h1>Our Global Campus</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <p>To generate knowledge and offer exemplary education and training to society for national and global developments.</p>
 
 
         </section>
