--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             <div class="row">
                 <div class="course-col">
                     <h3>Intermediate</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ipsum a corrupti? Debitis nesciunt dolore a. Nostrum, suscipit et est assumenda, quo explicabo corporis aliquid, recusandae voluptatibus iure quaerat distinctio.</p>
+                    <p>Undergraduate admissions to any programme at Kenyas Biggest University follows well laid procedures. Fuculties comprise various departments.Each faculty is headed by a Dean,who is the chairperson of the faculty board.We ensure that all students enroll in the department and maintain a satisfactory academic records and meet the obligation of the courses in which they are enrolled. Afterwards any student can enrol  to a higher degree in the university.</p>
                 </div>
                 <div class="course-col">
                     <h3>Degree</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit deleniti repellendus vel ex libero, suscipit eligendi facilis tempora id culpa quibusdam, aspernatur accusamus explicabo debitis atque, dolor nisi ut adipisci.</p>
+                    <p>We nature students so as to develop proffessional who have skills and ability to identify and solve engineering problems.We offer Barchelor degree and Master Degree programmes in our institution.We also ensure that all students regularly attend course lectures and other related activities that will instill knowledge and experience to the learners.Our graduations are always done after every year.</p>
                 </div>
                 <div class="course-col">
                     <h3>Post Graduation</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis quidem consectetur ipsum suscipit illum est voluptatibus perspiciatis sit eveniet minima eos veniam quas rerum libero laboriosam provident, ut similique recusandae.</p>
+                    <p>welcome to Kenyas biggest university to advance in your carreer.We have booklet that outlines all our academic programmes in post-graduate Diploma,Masters and Doctrate levels.All postgraduate studies are managed by the respective Schools and the Directorate of Graduate studies.</p>
                 </div>
             </div>
         </section>
